SimpleFlask/manifests/deployment-non-persistent-anti-affinity-soft1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-flask-1
  labels:
    app: simple-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-flask
  template:
    metadata:
      name: simple-flask
      labels:
        app: simple-flask
    spec:
      restartPolicy: Always
      volumes:
        - name: app-data 
          emptyDir: {}
      containers:
        - name: simple-flask
          image: fureasu346/simple-flask:1.0.1
          volumeMounts:
            - name: app-data
              mountPath: /app-data
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: http
              containerPort: 5080
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - simple-flask
                topologyKey: "kubernetes.io/hostname"
