SimpleFlask/manifests/service-ci-traefik-sticky.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-flask
  labels:
    app: simple-flask
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: TRAEFIK_SESSION
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.httponly: "true"
spec:
  selector:
    app: simple-flask
  ports:
    - name: http
      port: 5080
      targetPort: 5080
  type: ClusterIP
