SimpleFlask/manifests/traefik-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-flask-route
spec:
  parentRefs:
    - name: simple-flask-gw
      namespace: traefik
  hostnames:
    - "simple-flask.lab.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: simple-flask
          namespace: lab
          port: 5080
