SimpleFlask/manifests/traefik-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-flask-tls
  labels:
    app: simple-flask
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - simple-flask.lab.local
      secretName: simple-flask-tls
  rules:
    - host: simple-flask.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-flask
                port:
                  number: 5080
