SimpleFlask/manifests/traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-flask
  labels:
    app: simple-flask
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: simple-flask.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-flask
                port:
                  number: 5080
